--- a/CopilotStudioAccelerator/config/Prod/customDeploymentSettings.json
+++ b/CopilotStudioAccelerator/config/Prod/customDeploymentSettings.json
@@ -41,6 +41,12 @@
                                           "solutionComponentUniqueName":  "e80e3233-7932-ef11-8409-7c1e520ac4c6",
                                           "sortOrder":  "#{activateflow.order.AssignCopilotTesttoCopilotTestSetOwner.e80e3233-7932-ef11-8409-7c1e520ac4c6}#",
                                           "activate":  "#{activateflow.activate.AssignCopilotTesttoCopilotTestSetOwner.e80e3233-7932-ef11-8409-7c1e520ac4c6}#"
+                                      },
+                                      {
+                                          "solutionComponentName":  "GenerateConversationKPIs",
+                                          "solutionComponentUniqueName":  "ea936a04-6c6e-ef11-a670-000d3a8df0f3",
+                                          "sortOrder":  "#{activateflow.order.GenerateConversationKPIs.ea936a04-6c6e-ef11-a670-000d3a8df0f3}#",
+                                          "activate":  "#{activateflow.activate.GenerateConversationKPIs.ea936a04-6c6e-ef11-a670-000d3a8df0f3}#"
                                       }
                                   ],
     "ConnectorShareWithGroupTeamConfiguration":  [
@@ -88,6 +94,12 @@
                                                         "solutionComponentName":  "AssignCopilotTesttoCopilotTestSetOwner",
                                                         "solutionComponentUniqueName":  "e80e3233-7932-ef11-8409-7c1e520ac4c6",
                                                         "ownerEmail":  "#{owner.ownerEmail.AssignCopilotTesttoCopilotTestSetOwner.e80e3233-7932-ef11-8409-7c1e520ac4c6}#"
+                                                    },
+                                                    {
+                                                        "solutionComponentType":  29,
+                                                        "solutionComponentName":  "GenerateConversationKPIs",
+                                                        "solutionComponentUniqueName":  "ea936a04-6c6e-ef11-a670-000d3a8df0f3",
+                                                        "ownerEmail":  "#{owner.ownerEmail.GenerateConversationKPIs.ea936a04-6c6e-ef11-a670-000d3a8df0f3}#"
                                                     }
                                                 ],
     "FlowShareWithGroupTeamConfiguration":  [
@@ -125,6 +137,11 @@
                                                     "solutionComponentName":  "AssignCopilotTesttoCopilotTestSetOwner",
                                                     "solutionComponentUniqueName":  "e80e3233-7932-ef11-8409-7c1e520ac4c6",
                                                     "aadGroupTeamName":  "#{flow.sharing.AssignCopilotTesttoCopilotTestSetOwner.e80e3233-7932-ef11-8409-7c1e520ac4c6}#"
+                                                },
+                                                {
+                                                    "solutionComponentName":  "GenerateConversationKPIs",
+                                                    "solutionComponentUniqueName":  "ea936a04-6c6e-ef11-a670-000d3a8df0f3",
+                                                    "aadGroupTeamName":  "#{flow.sharing.GenerateConversationKPIs.ea936a04-6c6e-ef11-a670-000d3a8df0f3}#"
                                                 }
                                             ],
     "AadGroupCanvasConfiguration":  [
