--- a/CopilotStudioAccelerator/config/Prod/deploymentSettings.json
+++ b/CopilotStudioAccelerator/config/Prod/deploymentSettings.json
@@ -1,6 +1,10 @@
 {
     "EnvironmentVariables":  [
                                  {
+                                     "SchemaName":  "cat_DataverseURL",
+                                     "Value":  "#{environmentvariable.cat_DataverseURL}#"
+                                 },
+                                 {
                                      "SchemaName":  "cat_DelayforConversationTranscriptsEnrichment",
                                      "Value":  "#{environmentvariable.cat_DelayforConversationTranscriptsEnrichment}#"
                                  },
