--- a/CopilotStudioAccelerator/SolutionPackage/src/bots/cat_adaptiveCardGallery/configuration.json
+++ b/CopilotStudioAccelerator/SolutionPackage/src/bots/cat_adaptiveCardGallery/configuration.json
@@ -2,6 +2,8 @@
   "$kind": "BotConfiguration",
   "aISettings": {
     "$kind": "AISettings",
-    "useModelKnowledge": true
+    "isFileAnalysisEnabled": false,
+    "isSemanticSearchEnabled": false,
+    "useModelKnowledge": false
   }
 }
