--- a/CopilotstudioAcceleratorResources/Release/Pipelines/CopilotstudioAccelerator/create-github-release.yml
+++ b/CopilotstudioAcceleratorResources/Release/Pipelines/CopilotstudioAccelerator/create-github-release.yml
@@ -166,7 +166,7 @@ steps:
   parameters:
     gitHubApiUrl: 'microsoft/Power-CAT-Copilot-Studio-Kit'
     solutionName: 'CopilotStudioAccelerator'
-    solutionDisplayName: 'Copilot Studio Accelerator'
+    solutionDisplayName: 'Copilot Studio Kit'
     releaseMonth: ${{parameters.ReleaseMonthNumber}}
     releaseYear: ${{parameters.ReleaseYearNumber}}
     connectionName: 'powercat-alm'
