--- a/CopilotstudioAcceleratorResources/Pipelines/export-solution-to-github-Power-CAT-Copilot-Studio-Kit.yml
+++ b/CopilotstudioAcceleratorResources/Pipelines/export-solution-to-github-Power-CAT-Copilot-Studio-Kit.yml
@@ -104,7 +104,7 @@ stages:
   - job: export_solution_to_git
 
     pool:
-      vmImage: 'windows-2022'
+      vmImage: 'windows-latest'
 
     steps:
 
