--- a/CopilotStudioAccelerator/config/Prod/customDeploymentSettings.json
+++ b/CopilotStudioAccelerator/config/Prod/customDeploymentSettings.json
@@ -245,6 +245,12 @@
                                           "solutionComponentUniqueName":  "59ab6a3a-ba4b-f011-877a-002248095f4f",
                                           "sortOrder":  "#{activateflow.order.ValueSummary|Newagentclassification.59ab6a3a-ba4b-f011-877a-002248095f4f}#",
                                           "activate":  "#{activateflow.activate.ValueSummary|Newagentclassification.59ab6a3a-ba4b-f011-877a-002248095f4f}#"
+                                      },
+                                      {
+                                          "solutionComponentName":  "TestAutomation|AIBuilderCreditConsumption",
+                                          "solutionComponentUniqueName":  "e3f17f06-9373-f011-b4cc-00224802c180",
+                                          "sortOrder":  "#{activateflow.order.TestAutomation|AIBuilderCreditConsumption.e3f17f06-9373-f011-b4cc-00224802c180}#",
+                                          "activate":  "#{activateflow.activate.TestAutomation|AIBuilderCreditConsumption.e3f17f06-9373-f011-b4cc-00224802c180}#"
                                       }
                                   ],
     "ConnectorShareWithGroupTeamConfiguration":  [
@@ -496,6 +502,12 @@
                                                         "solutionComponentName":  "ValueSummary|Newagentclassification",
                                                         "solutionComponentUniqueName":  "59ab6a3a-ba4b-f011-877a-002248095f4f",
                                                         "ownerEmail":  "#{owner.ownerEmail.ValueSummary|Newagentclassification.59ab6a3a-ba4b-f011-877a-002248095f4f}#"
+                                                    },
+                                                    {
+                                                        "solutionComponentType":  29,
+                                                        "solutionComponentName":  "TestAutomation|AIBuilderCreditConsumption",
+                                                        "solutionComponentUniqueName":  "e3f17f06-9373-f011-b4cc-00224802c180",
+                                                        "ownerEmail":  "#{owner.ownerEmail.TestAutomation|AIBuilderCreditConsumption.e3f17f06-9373-f011-b4cc-00224802c180}#"
                                                     }
                                                 ],
     "FlowShareWithGroupTeamConfiguration":  [
@@ -703,6 +715,11 @@
                                                     "solutionComponentName":  "ValueSummary|Newagentclassification",
                                                     "solutionComponentUniqueName":  "59ab6a3a-ba4b-f011-877a-002248095f4f",
                                                     "aadGroupTeamName":  "#{flow.sharing.ValueSummary|Newagentclassification.59ab6a3a-ba4b-f011-877a-002248095f4f}#"
+                                                },
+                                                {
+                                                    "solutionComponentName":  "TestAutomation|AIBuilderCreditConsumption",
+                                                    "solutionComponentUniqueName":  "e3f17f06-9373-f011-b4cc-00224802c180",
+                                                    "aadGroupTeamName":  "#{flow.sharing.TestAutomation|AIBuilderCreditConsumption.e3f17f06-9373-f011-b4cc-00224802c180}#"
                                                 }
                                             ],
     "AadGroupCanvasConfiguration":  [
