Change GitHub repository reference from 'main' to 'rajeev-pac-latest'

--- a/CopilotstudioAcceleratorResources/Pipelines/export-solution-to-github-Power-CAT-Copilot-Studio-Kit.yml
+++ b/CopilotstudioAcceleratorResources/Pipelines/export-solution-to-github-Power-CAT-Copilot-Studio-Kit.yml
@@ -90,7 +90,7 @@ resources:
   repositories:
   - repository: PipelineRepo
     type: github
-    ref: main
+    ref: rajeev-pac-latest
     endpoint: powercat-alm
     name: Microsoft/coe-alm-accelerator-templates
 
